--- a/Aplicacion_web/Aplicacion_web/Aplicacion_web.csproj
+++ b/Aplicacion_web/Aplicacion_web/Aplicacion_web.csproj
@@ -72,7 +72,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="login.aspx" />
+    <Content Include="Presentacion\busqueda.aspx" />
+    <Content Include="Logica\Global.asax" />
+    <Content Include="Presentacion\login.aspx" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -85,12 +87,25 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="conexion.cs" />
-    <Compile Include="login.aspx.cs">
+    <Compile Include="Acceso\Seleccion.cs" />
+    <Compile Include="Logica\Curso.cs" />
+    <Compile Include="Logica\peticion.cs" />
+    <Compile Include="Presentacion\busqueda.aspx.cs">
+      <DependentUpon>busqueda.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Presentacion\busqueda.aspx.designer.cs">
+      <DependentUpon>busqueda.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Acceso\conexion.cs" />
+    <Compile Include="Logica\Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Presentacion\login.aspx.cs">
       <DependentUpon>login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="login.aspx.designer.cs">
+    <Compile Include="Presentacion\login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
